Add support for ipv6 and driver options

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -36,8 +36,10 @@
 
 - name: Ensure Matomo container network is created
   community.general.docker_network:
+    enable_ipv6: "{{ devture_systemd_docker_base_ipv6_enabled }}"
     name: "{{ matomo_container_network }}"
     driver: bridge
+    driver_options: "{{ devture_systemd_docker_base_container_networks_driver_options }}"
 
 - name: Ensure Matomo systemd service installed
   ansible.builtin.template:
